force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/amazonconnect__AC_ContactChannelAnalytics__c.object-meta.xml
<CustomObject>
    <label>AC Contact Channel Analytics</label>
    <nameField>
        <displayFormat>CCA {000000}</displayFormat>
        <label>Contact Channel Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Contact Channel Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>