force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__Case__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transcripts</relationshipLabel>
    <relationshipName>Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>