force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__Channel__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Channel__c</fullName>
    <label>Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>