force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__Contact__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transcripts</relationshipLabel>
    <relationshipName>Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>