force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactId__c</fullName>
    <externalId>true</externalId>
    <label>Contact Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>