force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactLensAgentSentiment__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactLensAgentSentiment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Agent Sentiment</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>