force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactLensCustomerSentiment__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactLensCustomerSentiment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Customer Sentiment</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>