force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactLensInterruptions__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactLensInterruptions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interruptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>