force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactLensNonTalkTime__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactLensNonTalkTime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non Talk Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>