force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactLensTalkSpeedCustomer__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactLensTalkSpeedCustomer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Customer Talk Speed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>