force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactLensTalkTimeAgent__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactLensTalkTimeAgent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Agent Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>