force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__ContactLensTranscriptsFullText__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__ContactLensTranscriptsFullText__c</fullName>
    <label>Transcripts Full Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>