force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__DominantLanguage__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__DominantLanguage__c</fullName>
    <label>Dominant Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>