force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__InstanceId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__InstanceId__c</fullName>
    <label>Amazon Connect Instance Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>