force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__Keywords__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Keywords__c</fullName>
    <label>Keywords</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>