force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__NamedEntities__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__NamedEntities__c</fullName>
    <label>Named Entities</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>