force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__RecordingPath__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__RecordingPath__c</fullName>
    <externalId>true</externalId>
    <label>Recording Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>