force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__Region__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Region__c</fullName>
    <label>Amazon Connect Instance Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>