force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__Sentiment__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>