force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/fields/amazonconnect__SfContact__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SfContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>