force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/listViews/amazonconnect__Contact_Lens.listView-meta.xml
<ListView>
    <fullName>amazonconnect__Contact_Lens</fullName>
    <columns>NAME</columns>
    <columns>amazonconnect__ContactLensCustomerSentiment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>amazonconnect__DataSource__c</field>
        <operation>equals</operation>
        <value>Contact_Lens</value>
    </filters>
    <label>Contact Lens</label>
</ListView>