force-app/main/default/objects/amazonconnect__AC_ContactChannelAnalytics__c/listViews/amazonconnect__Transcribe_and_Comprehend.listView-meta.xml
<ListView>
    <fullName>amazonconnect__Transcribe_and_Comprehend</fullName>
    <columns>NAME</columns>
    <columns>amazonconnect__Sentiment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>amazonconnect__DataSource__c</field>
        <operation>equals</operation>
        <value>Transcribe_and_Comprehend</value>
    </filters>
    <label>Transcribe and Comprehend</label>
</ListView>